<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:padding="20px"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content">

	<TableRow>
	
		<TextView android:id="@+id/show_card_txtSideA_name"
    		style="@style/Text" 
    		android:layout_weight=".3"
    		android:text="@string/c_side_a"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    		
    	<TextView android:id="@+id/show_card_txtSideA"
    		android:layout_weight=".7"
    		style="@style/Text" 
    	 	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    		
	</TableRow>

	<TableRow>
	
		<TextView android:id="@+id/show_card_txtSideB_name" 
    		style="@style/Text" 
    		android:layout_weight=".3"
    		android:text="@string/c_side_b"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    		
    	<TextView android:id="@+id/show_card_txtSideB"
    		android:layout_weight=".7"
    		style="@style/Text"
    	 	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>

	</TableRow>
	
	<TableRow>
	
		<TextView  
    		style="@style/Text" 
    		android:layout_weight=".3"
    		android:text="@string/c_last_checked_a"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    		
    	<TextView android:id="@+id/show_card_txtLastCheckedA"
    		android:layout_weight=".7"
    		style="@style/Text"
    	 	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>

	</TableRow>
	
	<TableRow>
	
		<TextView  
    		style="@style/Text" 
    		android:layout_weight=".3"
    		android:text="@string/c_last_checked_b"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    		
    	<TextView android:id="@+id/show_card_txtLastCheckedB"
    		android:layout_weight=".7"
    		style="@style/Text"
    	 	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>

	</TableRow>
	
	<TableRow>
	
		<TextView  
    		style="@style/Text" 
    		android:layout_weight=".3"
    		android:text="Caja A"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    		
    	<TextView android:id="@+id/show_card_txtBoxA"
    		android:layout_weight=".7"
    		style="@style/Text"
    	 	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>

	</TableRow>
	
	<TableRow>
	
		<TextView  
    		style="@style/Text" 
    		android:layout_weight=".3"
    		android:text="Caja B"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    		
    	<TextView android:id="@+id/show_card_txtBoxB"
    		android:layout_weight=".7"
    		style="@style/Text"
    	 	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>

	</TableRow>
	
</TableLayout>

<LinearLayout 
		android:orientation="horizontal"
		android:layout_weight="1"
		android:gravity="bottom"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    		
    	<ImageButton android:src="@drawable/edit"
    		android:layout_weight="1"
			android:background="@null"
    	   	android:onClick="editCard"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    		
    	<ImageButton android:src="@drawable/delete"
    		android:layout_weight="1"
			android:background="@null"
    	   	android:onClick="deleteCard"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    		
</LinearLayout> 

</LinearLayout>
